scripts/installers/iptables
# IPTables configuration for use with SpeechBridge on vanilla docker (CentOS 7 repo)
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT

# RDP
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3389 -j ACCEPT
# LV SRE
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5730 -j ACCEPT
# LV Lic
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7569 -j ACCEPT
# SIP
-A INPUT -p udp -m state --state NEW -m udp --dport 5060:5125 -j ACCEPT
# RTP
-A INPUT -p udp -m state --state NEW -m udp --dport 10000:10127 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
